--- a/index.html
+++ b/index.html
@@ -1,1 +1,131 @@
 <!DOCTYPE html>
+<html lang="fr">
+<head>
+
+    <meta charset="UTF-8">
+    <!--Metas for improving SEO-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Discovering my CV" />
+	<meta property="og:title" content="Chloé Py - CV" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://github.com/Av-code80" />
+	<meta property="og:image" content="https://Aveh.Ghasemian.io./images/photo_facebook.png" />
+	<meta property="og:description" content="Découvrez mon CV" />
+    <!--links fontawsome-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
+    <!--for impression-->
+    <link rel="stylesheet" type="text/css" href="impression.css" media="print">
+	<link rel="icon" href="images/favicon.png" sizes="32x32">
+    <link rel="stylesheet" type="text/css" href="css/style.css" media="screen">
+    <title>CV Chloé Py</title>
+</head>
+<body>
+    <!-- Header -->
+    <header>
+        <div id="photo">
+            <img src="image/Aveh.jpg" alt="photo profil">
+        </div>
+        <div id="titre">
+            <h1><span class="color-text">Aveh</span> Ghasemian</h1>
+            <h2><span class="underline">Dével</span>oppeur web</h2>
+            
+        </div>
+    </header>
+
+    <!-- Bloc -->
+    <main>
+        <div id="bloc-gauche">
+            <aside id="contact">
+                <h2>Contact</h2>
+                <address>
+                    <p>Adresse<br> 34 rue de Tolbiac<br> 75013, Paris</p>
+                    <p>Téléphone <br><a href="tel:+33600000000">06.23.51.86.80</a></p>
+                    <p>Email <br><a href="mailto:chloé.py@gmail.com" title="Contactez moi !">chloé.py@gmail.com</a></p>
+                    <p>Site web <br><a href="" target="_blank"></a></p>
+                </address>  
+            </aside>
+
+            <aside id="a-propos-de-moi">
+                <h2>À propos de moi</h2>
+                <div class="texte-a-propos">
+                    <p> Passionnée par l’univers du decoration d'intérieur, je suis créative, autodidacte et doté d'un bon esprit d'analyse et de synthèse.
+
+                    </p>
+                </div>   
+            </aside>
+        </div>
+
+        <div id="bloc-droite">
+            
+            <article id="formations">
+                <h2>
+                    <i class="fas fa-graduation-cap"></i>Formations
+                </h2>
+                <ol>
+                    <li class="bloc-formations">
+                        <div class="bloc-dates">
+                            <i class="fas fa-bullseye"></i>
+                            <h4>02/2019 - 01/2020<br></h4>
+                        </div>
+                        <div class="bloc-details">
+                            <h3>Formation du décorateur d'intérieur</h3>
+                            <h4>Decoration de luxe</h4>
+                            <p> 
+                               - Concevoir l'espace grâce son intuition.<br>
+                               - Maîtriser les bases théoriques et techniques.<br>   
+                            </p> 
+                        </div> 
+                    </li>
+                </ol>      
+            </article>
+
+            <li class="bloc-formations">
+                <div class="bloc-dates">
+                    <i class="fas fa-circle"></i>
+                    <h4>09/2019-02/2020<br>Université Paris Nanterre</h4>
+                </div>
+                <div class="bloc-details">
+                    <h3>ALCF</h3>
+                    <h4>Diplôme d’université en formation ALCF, niveau B2,</h4>
+                    <p>Techniques de design général.</p> 
+                </div> 
+            </li>
+            <li class="bloc-formations">
+                <div class="bloc-dates">
+                    <i class="fas fa-circle"></i>
+                    <h4>09/2011 - 08/2014<br>Université Paris-Sorbonne</h4> 
+                </div>
+                <div class="bloc-details">
+                    <h3>Littérature francaise</h3>
+                    <h4>Licence bac+3</h4>
+                    <p>Littérature classicque et moderne<br/>
+                    </p>
+                </div> 
+            </li>
+
+            <li class="bloc-formations">
+                <div class="bloc-dates">
+                    <i class="fas fa-circle"></i>
+                    <h4>09/2010 - 02/2011<br>Université de Gustave Eiffel</h4>
+                </div>
+                <div class="bloc-details">
+                    <h3>Informatique</h3>
+                    <h4>Bac+2</h4>
+                    <p>Décrire et utiliser systèmes et réseaux informatiques,<br/>
+                    </p> 
+                </div> 
+            </li>
+            <li class="bloc-formations">
+                <div class="bloc-dates">
+                    <i class="fas fa-circle"></i>
+                    <h4>09/2004 - 07/2005<br>Lycée Fresnel de Paris</h4>
+                </div>
+                <div class="bloc-details">
+                    <h3>Baccalauréat</h3>
+                    <h4>Commerce</h4> 
+                    <p>Baccalauréat, diplôme de fin d'études Secondaires</p>
+                </div> 
+            </li>
+        </ol>      
+    </article>
