css error modification

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <!-- Header -->
     <header>
         <div id="photo">
-            <img src="image/Aveh.jpg" alt="photo profil">
+            <img src="image/chloé.jpg" alt="photo profil">
         </div>
         <div id="titre">
-            <h1><span class="color-text">Aveh</span> Ghasemian</h1>
-            <h2><span class="underline">Dével</span>oppeur web</h2>
+            <h1><span class="color-text">Chloé</span>Py</h1>
+            <h2><span class="underline">Décorateur</span>d'intérieur</h2>
             
         </div>
     </header>
