--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <li class="bloc-formations">
                         <div class="bloc-dates">
                             <i class="fas fa-bullseye"></i>
-                            <h4>02/2019 - 01/2020<br></h4>
+                            <h4>09/2020 - 01/2021<br>edaa</h4>
                         </div>
                         <div class="bloc-details">
                             <h3>Formation du décorateur d'intérieur</h3>
@@ -129,3 +129,96 @@
             </li>
         </ol>      
     </article>
+<!-- Expèriences Pro -->
+<article id="experiences">
+    <h2>
+        <i class="fas fa-briefcase"></i>
+        Expériences Professionnelles
+    </h2>
+    <ol>
+        <li class="bloc-experiences">
+            <div class="bloc-dates">
+                <i class="fas fa-bullseye"></i>
+                <h4>10/2018-À aujourd'hui<br>Paris</h4>  
+            </div>
+            <div class="bloc-details">
+                <h3>Decorateur d'intérieur</h3>
+                <h4>Freelance</h4>
+                <p>- Proposer une vue de design d'intériur unique</p> 
+            </div> 
+        </li>
+        <li class="bloc-experiences">
+            <div class="bloc-dates">
+                <i class="fas fa-circle"></i>
+                <h4>01/2018 - 03/2020 <br>Paris</h4>
+            </div>
+            <div class="bloc-details">
+                <h3>Grivel</h3>
+                <h4>Soutien scolaire</h4>
+                <p>Soutien scolaire et l’animatrice scolaire.<br/>            
+                </div> 
+        </li>
+        <li class="bloc-experiences">
+            <div class="bloc-dates">
+                <i class="fas fa-circle"></i>
+                <h4>02/2016 - 07/2018<br>Paris</h4>
+            </div>
+            <div class="bloc-details">
+                <h3>Aramis</h3>
+                <h4>Chargée du marketing.
+                </h4>
+                <p>La publicité et les réseaux sociaux.</p> 
+            </div> 
+        </li>
+        <li class="bloc-experiences">
+            <div class="bloc-dates">
+                <i class="fas fa-circle"></i>
+                <h4>06/2011-03/2016<br>Paris</h4>
+            </div>
+            <div class="bloc-details">
+                <h3></h3>
+                <h4>Sfr-Red</h4>
+                <p>Conseille clientèle.
+            </p> 
+            </div> 
+        </li>
+</ol>
+</article> 
+</div>
+</main>
+<!-- Footer -->   
+<footer>
+    <aside id="loisirs">
+        <h2>Loisirs</h2>
+        <div class="icone-loisirs">
+            <span class="cercle"><i class="fas fa-book"></i></span>
+            <span class="cercle"><i class="fas fa-running"></i></span>
+            <span class="cercle"><i class="fab fa-steam"></i></span> 
+        </div>
+    </aside>
+
+    <article id="recommandations">
+        <h2>
+            <i class="fas fa-pencil-alt"></i>
+            Recommandations
+        </h2>
+        
+            <div class="bloc-recommandations">
+                <div class="recommandation-g">
+                    <h4>Véronique Grivel</h4>
+                    <p>Chef de projet marketing</p>
+                    <p>Téléphone : <a href="tel:+33600000000">06.20.30.58.50</a></p>
+                    <p>Email : <a href="mailto:veronique.grivel@email.com">veronique.grivel@gmail.com</a></p>
+                </div>
+                <div class="recommandation-d">
+                    <h4>Géraldin Lerouge</h4>
+                    <p>Mentor bancaire</p>
+                    <p>Téléphone : <a href="tel:+33600000000">06.34.23.47.25</a></p>
+                    <p>Email : <a href="mailto:geraldin.lerouge@gmail.com">geraldin.lerouge@gmail.com</a></p>
+                </div>  
+            </div>   
+    </article>
+</footer>
+</body>
+</html>
+    
