--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <img src="image/chloé.jpg" alt="photo profil">
         </div>
         <div id="titre">
-            <h1><span class="color-text">Chloé</span>Py</h1>
-            <h2><span class="underline">Décorateur</span>d'intérieur</h2>
+            <h1><span class="color-text">Chloé</span> Py</h1>
+            <h2><span class="underline">Déco</span>ratrice d'intérieur</h2>
             
         </div>
     </header>
@@ -88,7 +88,7 @@
                 <div class="bloc-details">
                     <h3>ALCF</h3>
                     <h4>Diplôme d’université en formation ALCF, niveau B2,</h4>
-                    <p>Techniques de design général.</p> 
+                    <p>- Techniques de design général.</p> 
                 </div> 
             </li>
             <li class="bloc-formations">
@@ -99,7 +99,7 @@
                 <div class="bloc-details">
                     <h3>Littérature francaise</h3>
                     <h4>Licence bac+3</h4>
-                    <p>Littérature classicque et moderne<br/>
+                    <p>- Littérature classicque et moderne<br/>
                     </p>
                 </div> 
             </li>
@@ -112,7 +112,7 @@
                 <div class="bloc-details">
                     <h3>Informatique</h3>
                     <h4>Bac+2</h4>
-                    <p>Décrire et utiliser systèmes et réseaux informatiques,<br/>
+                    <p>- Décrire et utiliser systèmes et réseaux informatiques,<br/>
                     </p> 
                 </div> 
             </li>
@@ -124,7 +124,7 @@
                 <div class="bloc-details">
                     <h3>Baccalauréat</h3>
                     <h4>Commerce</h4> 
-                    <p>Baccalauréat, diplôme de fin d'études Secondaires</p>
+                    <p>- Baccalauréat, diplôme de fin d'études Secondaires</p>
                 </div> 
             </li>
         </ol>      
@@ -155,7 +155,7 @@
             <div class="bloc-details">
                 <h3>Grivel</h3>
                 <h4>Soutien scolaire</h4>
-                <p>Soutien scolaire et l’animatrice scolaire.<br/>            
+                <p>- Soutien scolaire et l’animatrice scolaire.<br/>            
                 </div> 
         </li>
         <li class="bloc-experiences">
@@ -167,7 +167,7 @@
                 <h3>Aramis</h3>
                 <h4>Chargée du marketing.
                 </h4>
-                <p>La publicité et les réseaux sociaux.</p> 
+                <p>- Chargée du service de la publicité et des réseaux sociaux.</p> 
             </div> 
         </li>
         <li class="bloc-experiences">
@@ -178,8 +178,7 @@
             <div class="bloc-details">
                 <h3></h3>
                 <h4>Sfr-Red</h4>
-                <p>Conseille clientèle.
-            </p> 
+                <p>- Conseillère clientèle.</p> 
             </div> 
         </li>
 </ol>
