image optimisation, DSStore

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Header -->
     <header>
         <div id="photo">
-            <img src="image/chloé.jpg" alt="photo profil">
+            <img src="image/Chloe.jpg" alt="photo profil">
         </div>
         <div id="titre">
             <h1><span class="color-text">Chloé</span> Py</h1>
